# expese-report-bot

./: .dockerignore  .env  .env.deploy.example  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  Dockerfile  README.md  authorized-users.example.json  behave.ini  docker-compose.yml  handoff.md  pretty.output  pyproject.toml  skills-lock.json
.agents/skills/release/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/adr/: 0001-initial-architecture.md  0002-dspy-for-extraction.md  0003-rename-adapters-in-to-adapters-inbound.md  0004-stdlib-logging-for-operational-observability.md  0005-telegram-user-authorization.md  0006-application-owned-expense-recording-interface.md
docs/architecture/: hexagonal-alignment-todo.md
docs/expectations/: authorization.md  delete-expenses.md  expense-recording-free-text-tracer.md  logging.md  readme-branding.md  vertical-slice-1.md
docs/superpowers/plans/: 2026-07-19-list-command.md  2026-07-19-telegram-user-authorization.md  (+4 more)
features/: authorization.feature  cli_extraction.feature  correction.feature  delete.feature  environment.py  list.feature  report.feature  telegram_bot.feature
features/steps/: authorization_steps.py  cli_steps.py  common_steps.py  correction_steps.py  delete_steps.py  list_steps.py  report_steps.py  telegram_steps.py
tests/: conftest.py
tests/application/: test_expense_recording.py
tests/domain/: test_correction_state.py  test_csv_generator.py  test_models.py
tests/ports/: test_extraction.py  test_repository.py
(+23 files in other folders)
