[project]
name = "expense-report-bot"
version = "0.2.0"
description = "A Telegram bot that extracts structured expense data from receipt photos"
authors = [
    { name = "Ciro Lucio Tecce", email = "cirolucio.tecce@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dspy-ai>=2.6",
    "openai>=1.0",
    "pillow>=11",
    "python-telegram-bot[job-queue]>=21.11",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "expense_report"
module-root = "src"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ty]

[tool.ty.environment]
python-version = "3.12"
root = ["src", "."]

[tool.ty.analysis]
replace-imports-with-any = ["PIL.**", "behave"]

[[tool.ty.overrides]]
include = ["features/**"]
rules = { call-non-callable = "ignore", invalid-type-form = "ignore", possibly-missing-submodule = "ignore" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
expense-extract = "expense_report.adapters.inbound.cli_extraction:main"
expense-bot = "expense_report.adapters.inbound.main:main"

[dependency-groups]
dev = [
    "behave>=1.3",
    "pre-commit>=4.0",
    "pytest>=8",
    "ruff>=0.9",
    "ty>=0.0.1",
]
